--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^2.1.3",
-    "react-test-renderer": "^16.7.0"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,6 +25,8 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
+      "!src/index.js",
+      "!src/setupTests.js",
       "!<rootDir>/node_modules/",
       "!src/registerServiceWorker.js"
     ],
@@ -40,5 +41,8 @@
     "coverageReporters": [
       "text"
     ]
+  },
+  "devDependencies": {
+    "faker": "^4.1.0"
   }
 }
